# buda-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  example.env  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: bump.yml  ci.yml  release.yml
scripts/: release.sh
src/buda/: __init__.py
src/buda-stubs/: __init__.pyi
src/buda-stubs/core/: auth.pyi  limiter.pyi  providers.pyi  retry.pyi  settings.pyi
src/buda-stubs/rest/client/: async_.pyi  base.pyi  sync_.pyi
src/buda-stubs/rest/endpoints/: account.pyi  base.pyi  markets.pyi  orders.pyi
src/buda-stubs/rest/models/: account.pyi  common.pyi  markets.pyi  orders.pyi
src/buda-stubs/socket/: __init__.pyi  channels.pyi  client.pyi
src/buda/core/: auth.py  limiter.py  providers.py  retry.py  settings.py
src/buda/rest/client/: async_.py  base.py  sync_.py
src/buda/rest/endpoints/: account.py  base.py  markets.py  orders.py
src/buda/rest/models/: account.py  common.py  markets.py  orders.py
src/buda/socket/: __init__.py  channels.py  client.py
src/buda_client/: __init__.py  auth.py  providers.py  rate_limiter.py  retry.py  settings.py
src/buda_client/clients/: _async.py  _sync.py  base.py
src/buda_client/core/: limiter.py  retry.py
src/buda_client/endpoints/: account.py  base.py  markets.py  orders.py
src/buda_client/models/: account.py  common.py  markets.py  orders.py
src/buda_client/rest/client/: async_.py  base.py  base_client.py  sync_.py
src/buda_client/rest/endpoints/: account.py  markets.py  orders.py
src/buda_client/rest/models/: account.py  common.py  markets.py  orders.py
src/buda_client/socket/: __init__.py  client.py
src/buda_client/ws/: __init__.py  channels.py  client.py
tests/: conftest.py
tests/core/: test_auth.py  test_limiter.py  test_providers.py  test_retry.py  test_settings.py
tests/rest/: test_async_client.py  test_client_base.py  test_endpoints.py  test_models.py  test_sync_client.py
tests/socket/: test_channels.py  test_websocket.py
