[project]
name = "buda-client"
version = "0.1.0"
description = "Buda.com API client with support for both REST and WebSocket APIs."
readme = "README.md"
authors = [
    { name = "Matías Schiaffino Tyrer", email = "matias.scht@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=26.1.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
]
